PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2015, PHP 5.5.22


- Date:
  . Fixed bug #45081 (strtotime incorrectly interprets SGT time zone). (Derick)
  . Fixed bug #55407 (Impossible to prototype DateTime::createFromFormat).
    (Derick, Felipe)

- Dba:
  . Fixed bug #68711 (useless comparisons). (bugreports at internot dot info)

- Fileinfo:
  . Fixed bug #68827 (Double free with disabled ZMM). (Joshua Rogers)

- FPM:
  . Fixed bug #68571 (core dump when webserver close the socket).
    (redfoxli069 at gmail dot com, Laruence)

- OpenSSL:
  . Fixed bug #55618 (use case-insensitive cert name matching).
    (Daniel Lowrey)

- PDO_mysql:
  . Fixed bug #68750 (PDOMysql with mysqlnd does not allow the usage of
    named pipes). (steffenb198@aol.com)

- Phar:
  . Fixed bug #68901 (use after free). (bugreports at internot dot info)

- Sqlite3:
  . Fixed bug #68260 (SQLite3Result::fetchArray declares wrong 
    required_num_args). (Julien)

- Mysqli:
  . Fixed bug #68114 (linker error on some OS X machines with fixed
    width decimal support) (Keyur Govande)
  . Fixed bug #68657 (Reading 4 byte floats with Mysqli and libmysqlclient
    has rounding errors) (Keyur Govande)

- Session:
  . Fixed bug #68941 (mod_files.sh is a bash-script) (bugzilla at ii.nl, Yasuo)

- Streams:
  . Fixed bug which caused call after final close on streams filter. (Bob)

22 Jan 2015, PHP 5.5.21

- Core:
  . Upgraded crypt_blowfish to version 1.3. (Leigh)
  . Fixed bug #60704 (unlink() bug with some files path). 
  . Fixed bug #65419 (Inside trait, self::class != __CLASS__). (Julien)
  . Fixed bug #65576 (Constructor from trait conflicts with inherited
    constructor). (dunglas at gmail dot com)
  . Fixed bug #55541 (errors spawn MessageBox, which blocks test automation).
    (Anatol)
  . Fixed bug #68297 (Application Popup provides too few information). (Anatol)