@@ -27,7 +27,6 @@
 #include <errno.h>
 
 
-
 #ifdef PHP_WIN32
 # include <Ws2tcpip.h>
 # include "win32/inet.h"
